7Zap native nuget package with 7zC libs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,22 +42,19 @@ jobs:
       - name: Nuget pack
         run: |
           nuget pack 7Zap\Nuget\7Zap.NET.nuspec -Version 23.01.${{ github.run_number }} -BasePath "${{ github.workspace }}" -NonInteractive -Properties "src_root=.;build_x64=build-x64;build_x86=build-x86;build_arm64=build-Arm64;config=Release"
+          nuget pack 7Zap\Nuget\7Zap.nuspec -Version 23.01.${{ github.run_number }} -BasePath "${{ github.workspace }}" -NonInteractive -Properties "src_root=.;build_x64=build-x64;build_x86=build-x86;build_arm64=build-Arm64;config=Release"
 
       - uses: actions/upload-artifact@v3.1.2
         with:
           name: 7Zap
           path: |
-            build-x86\7Zap\7Zap\Release\7Zap.dll
-            build-x64\7Zap\7Zap\Release\7Zap.dll
-            build-Arm64\7Zap\7Zap\Release\7Zap.dll
-            build-x64\7Zap\7Zap.NET\Release\7Zap.NET.dll
-            7Zap.NET.*.nupkg
+            7Zap.*.nupkg
 
       - name: Publish nuget packages to github and nuget.org
         if: ${{ github.event.inputs.publish_nuget == 'true' }}
         run: |
           dotnet nuget add source --username ${{ github.actor }} --password ${{ secrets.TAGGER_PAT }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
-          dotnet nuget push 7Zap.NET.*.nupkg --api-key ${{ secrets.TAGGER_PAT }} --source github
-          dotnet nuget push 7Zap.NET.*.nupkg --api-key ${{ secrets.NUGET_TOKEN }} --source https://api.nuget.org/v3/index.json
+          dotnet nuget push 7Zap.*.nupkg --api-key ${{ secrets.TAGGER_PAT }} --source github
+          dotnet nuget push 7Zap.*.nupkg --api-key ${{ secrets.NUGET_TOKEN }} --source https://api.nuget.org/v3/index.json
           git tag "v23.01.${{ github.run_number }}"
           git push --tags
