Improve nested-in-folder check Add 7Zap.dll resources

--- a/7Zap/7Zap/CMakeLists.txt
+++ b/7Zap/7Zap/CMakeLists.txt
@@ -7,6 +7,7 @@ file(GLOB hdr_7zap UpdateCallback7Zap.h)
 file(GLOB pub_hdr_7zap 7Zap.h)
 file(GLOB src_7zap *.cpp)
 list(APPEND src_7zap 7Zap.def)
+list(APPEND src_7zap 7Zap.rc)
 
 add_library(7Zap SHARED $<TARGET_OBJECTS:7zrObj>)
 target_sources(7Zap PRIVATE ${src_7zap}
