--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -34,6 +34,7 @@ jobs:
 
       - name: Build x86
         run: |
+          cd build-x86
           cmake --build . --config Release
 
       - name: Perform CodeQL Analysis
