Win32- build with assembler files. binaries use -SAFESH:NO to pass build

--- a/7Zap/7Zap/CMakeLists.txt
+++ b/7Zap/7Zap/CMakeLists.txt
@@ -26,3 +26,7 @@ target_include_directories(7Zap
 
 target_precompile_headers(7Zap
 	PRIVATE pch.h)
+
+if(${CMAKE_GENERATOR_PLATFORM} STREQUAL "Win32")
+	target_link_options(7Zap PUBLIC "-SAFESEH:NO")
+endif()
